Added modularity support

--- a/Spark Theme.htm
+++ b/Spark Theme.htm
@@ -1,7 +1,11 @@
 ﻿<html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="spark.theme.css">
-		<script type="text/javascript" src="core.js"></script>
+		
+        <script type="text/javascript" src="core.js"></script>
+        <script type="text/javascript" src="user-interface.core.js"></script>
+        <script type="text/javascript" src="progress-bar.user-interface.core.js"></script>
+
 		<script defer="defer">			
 			window.addEventListener('load', function () {
 				select = new core.userInterface.CoreSelect();
